--- a/terms/index.html
+++ b/terms/index.html
@@ -20,13 +20,18 @@
     <nav class="scrolled">
         <div class="container nav-content">
             <a href="../" class="logo"><span data-personalize="name">UpGlow</span><span>.</span></a>
+            <button class="mobile-nav-toggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-links">
                 <a href="../">Home</a>
                 <a href="../services/">Services</a>
                 <a href="../about/">About</a>
                 <a href="../contact/">Contact</a>
             </div>
-            <a href="../contact/" class="btn btn-primary">Book Now</a>
+            <a href="../contact/" class="btn btn-primary nav-cta">Book Now</a>
         </div>
     </nav>
 
