--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span><span>.</span></a>
+            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -65,7 +65,8 @@
                         using an Integrative approach, we look for the "why" behind your concerns. Whether it's medical
                         weight loss, skin health, or mental de-stressing, we offer a one-stop-shop experience.</p>
                     <p style="color: var(--luxe-text-muted);">Find your youth again at any of our Bluegrass area
-                        locations in Lexington, Nicholasville, and Harrodsburg.</p>
+                        locations in <span data-personalize="locations">Lexington, Nicholasville, and
+                            Harrodsburg</span>.</p>
                 </div>
             </div>
 
