--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span><span>.</span></a>
+            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -48,15 +48,19 @@
                 <div style="display: flex; flex-direction: column; gap: 24px;">
                     <div>
                         <h4 style="margin-bottom: 8px;">Lexington / Nicholasville</h4>
-                        <p style="color: var(--luxe-text-muted);">185 East Brannon Rd.<br>Nicholasville, KY 40356</p>
+                        <p style="color: var(--luxe-text-muted);" data-personalize="address">185 East Brannon
+                            Rd.<br>Nicholasville, KY 40356</p>
                     </div>
                     <div>
                         <h4 style="margin-bottom: 8px;">Harrodsburg</h4>
-                        <p style="color: var(--luxe-text-muted);">697 South College St.<br>Harrodsburg, KY 40330</p>
+                        <p style="color: var(--luxe-text-muted);" data-personalize="address2">697 South College
+                            St.<br>Harrodsburg, KY 40330</p>
                     </div>
                     <div>
                         <h4 style="margin-bottom: 8px;">Contact</h4>
-                        <p style="color: var(--luxe-text-muted);">saltersalliance@gmail.com<br>(859) 303-7143</p>
+                        <p style="color: var(--luxe-text-muted);"><a href="mailto:saltersalliance@gmail.com"
+                                data-personalize="email">saltersalliance@gmail.com</a><br><a href="tel:8593037143"
+                                data-personalize="phone">(859) 303-7143</a></p>
                     </div>
                 </div>
             </div>
