--- a/services/index.html
+++ b/services/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span><span>.</span></a>
+            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -52,7 +52,7 @@
                 <!-- Service 1 -->
                 <div class="reveal"
                     style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 60px; align-items: center;">
-                    <div
+                    <div class="luxe-placeholder"
                         style="background: var(--luxe-surface); height: 450px; border-radius: 32px; border: 1px solid var(--luxe-border); position: relative; overflow: hidden;">
                         <div
                             style="position: absolute; inset: 0; background: linear-gradient(45deg, var(--luxe-primary-glow), transparent); opacity: 0.2;">
@@ -104,7 +104,7 @@
                         </ul>
                         <a href="../contact/" class="btn btn-outline">Book My Glow</a>
                     </div>
-                    <div
+                    <div class="luxe-placeholder"
                         style="background: var(--luxe-surface); height: 450px; border-radius: 32px; border: 1px solid var(--luxe-border); position: relative; overflow: hidden; order: 1;">
                         <div
                             style="position: absolute; inset: 0; background: linear-gradient(-45deg, var(--luxe-primary-glow), transparent); opacity: 0.2;">
@@ -118,7 +118,7 @@
                 <!-- Service 3 -->
                 <div class="reveal"
                     style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 60px; align-items: center;">
-                    <div
+                    <div class="luxe-placeholder"
                         style="background: var(--luxe-surface); height: 450px; border-radius: 32px; border: 1px solid var(--luxe-border); position: relative; overflow: hidden;">
                         <div
                             style="position: absolute; inset: 0; background: linear-gradient(45deg, var(--luxe-primary-glow), transparent); opacity: 0.2;">
@@ -171,7 +171,7 @@
                         </ul>
                         <a href="../contact/" class="btn btn-outline">Book Your Drip</a>
                     </div>
-                    <div
+                    <div class="luxe-placeholder"
                         style="background: var(--luxe-surface); height: 450px; border-radius: 32px; border: 1px solid var(--luxe-border); position: relative; overflow: hidden; order: 1;">
                         <div
                             style="position: absolute; inset: 0; background: linear-gradient(-45deg, var(--luxe-primary-glow), transparent); opacity: 0.2;">
@@ -185,7 +185,7 @@
                 <!-- Service 5 -->
                 <div class="reveal"
                     style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 60px; align-items: center;">
-                    <div
+                    <div class="luxe-placeholder"
                         style="background: var(--luxe-surface); height: 450px; border-radius: 32px; border: 1px solid var(--luxe-border); position: relative; overflow: hidden;">
                         <div
                             style="position: absolute; inset: 0; background: linear-gradient(45deg, var(--luxe-primary-glow), transparent); opacity: 0.2;">
@@ -236,7 +236,7 @@
                         </ul>
                         <a href="../contact/" class="btn btn-outline">View Results</a>
                     </div>
-                    <div
+                    <div class="luxe-placeholder"
                         style="background: var(--luxe-surface); height: 450px; border-radius: 32px; border: 1px solid var(--luxe-border); position: relative; overflow: hidden; order: 1;">
                         <div
                             style="position: absolute; inset: 0; background: linear-gradient(-45deg, var(--luxe-primary-glow), transparent); opacity: 0.2;">
