--- a/terms/index.html
+++ b/terms/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span><span>.</span></a>
+            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
