--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
+            <a href="../" class="logo">UpGlow</a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -43,24 +43,24 @@
                 <h1 style="font-size: 3rem; margin-bottom: 24px;">Begin Your <span
                         style="color: var(--luxe-primary);">Journey.</span></h1>
                 <p style="color: var(--luxe-text-muted); margin-bottom: 40px;">Ready to elevate your aesthetic? Schedule
-                    a consultation with our clinicians at <span data-personalize="name">UpGlow Med Spa</span> today.</p>
+                    a consultation with our clinicians at UpGlow Med Spa today.</p>
 
                 <div style="display: flex; flex-direction: column; gap: 24px;">
                     <div>
                         <h4 style="margin-bottom: 8px;">Lexington / Nicholasville</h4>
-                        <p style="color: var(--luxe-text-muted);" data-personalize="address">185 East Brannon
+                        <p style="color: var(--luxe-text-muted);">185 East Brannon
                             Rd.<br>Nicholasville, KY 40356</p>
                     </div>
                     <div>
                         <h4 style="margin-bottom: 8px;">Harrodsburg</h4>
-                        <p style="color: var(--luxe-text-muted);" data-personalize="address2">697 South College
+                        <p style="color: var(--luxe-text-muted);">697 South College
                             St.<br>Harrodsburg, KY 40330</p>
                     </div>
                     <div>
                         <h4 style="margin-bottom: 8px;">Contact</h4>
-                        <p style="color: var(--luxe-text-muted);"><a href="mailto:saltersalliance@gmail.com"
-                                data-personalize="email">saltersalliance@gmail.com</a><br><a href="tel:8593037143"
-                                data-personalize="phone">(859) 303-7143</a></p>
+                        <p style="color: var(--luxe-text-muted);"><a
+                                href="mailto:saltersalliance@gmail.com">saltersalliance@gmail.com</a><br><a
+                                href="tel:8593037143">(859) 303-7143</a></p>
                     </div>
                 </div>
             </div>
@@ -114,11 +114,9 @@
                 <a href="../imprint/"
                     style="text-decoration: none; color: var(--luxe-text-muted); font-size: 0.8rem; font-weight: 600;">Imprint</a>
             </div>
-            <p>&copy; 2026 <span data-personalize="name">UpGlow Med Spa</span>. All rights reserved.</p>
+            <p>&copy; 2026 UpGlow Med Spa. All rights reserved.</p>
         </div>
     </footer>
-
-    <script src="../js/personalizer.js"></script>
     <script src="../js/animations.js"></script>
 </body>
 
