--- a/services/index.html
+++ b/services/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
+            <a href="../" class="logo">UpGlow</a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -42,7 +42,7 @@
                 <h1 style="font-size: 3rem; margin-bottom: 24px;">Our Signature <span
                         style="color: var(--luxe-primary);">Treatments.</span></h1>
                 <p style="color: var(--luxe-text-muted); max-width: 700px; margin: 0 auto; font-size: 1.1rem;">Every
-                    treatment at <span data-personalize="name">UpGlow Med Spa</span> is a blend of medical precision and
+                    treatment at UpGlow Med Spa is a blend of medical precision and
                     artistic vision. We utilize the world's most advanced aesthetic technologies to deliver results that
                     are both safe and spectacular.</p>
             </div>
@@ -257,7 +257,7 @@
                 <h2 style="font-size: 3rem; margin-bottom: 24px;">Unlock Your <span
                         style="color: var(--luxe-primary);">Best Self.</span></h2>
                 <p style="color: var(--luxe-text-muted); font-size: 1.25rem; margin-bottom: 48px;">Experience the fusion
-                    of luxury and medical science at <span data-personalize="name">UpGlow Med Spa</span>.</p>
+                    of luxury and medical science at UpGlow Med Spa.</p>
                 <a href="../contact/" class="btn btn-primary">Book Your Consultation</a>
             </div>
         </section>
@@ -275,11 +275,9 @@
                 <a href="../imprint/"
                     style="text-decoration: none; color: var(--luxe-text-muted); font-size: 0.8rem; font-weight: 600;">Imprint</a>
             </div>
-            <p>&copy; 2026 <span data-personalize="name">UpGlow Med Spa</span>. All rights reserved.</p>
+            <p>&copy; 2026 UpGlow Med Spa. All rights reserved.</p>
         </div>
     </footer>
-
-    <script src="../js/personalizer.js"></script>
     <script src="../js/animations.js"></script>
 </body>
 
