--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
+            <a href="../" class="logo">UpGlow</a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -42,7 +42,7 @@
                 <h1 style="font-size: 3rem; margin-bottom: 32px;">The Best Way to <span
                         style="color: var(--luxe-primary);">Revive.</span></h1>
                 <p style="font-size: 1.25rem; color: var(--luxe-text-muted); margin-bottom: 48px; line-height: 1.8;">At
-                    <span data-personalize="name">UpGlow Med Spa</span>, we believe that everyone is naturally beautiful
+                    UpGlow Med Spa, we believe that everyone is naturally beautiful
                     and unique. Our revolutionary approach combines advances in medical technology with an Integrative
                     Medicine expertise to help you get closer to your dream results—inside and out.
                 </p>
@@ -65,8 +65,8 @@
                         using an Integrative approach, we look for the "why" behind your concerns. Whether it's medical
                         weight loss, skin health, or mental de-stressing, we offer a one-stop-shop experience.</p>
                     <p style="color: var(--luxe-text-muted);">Find your youth again at any of our Bluegrass area
-                        locations in <span data-personalize="locations">Lexington, Nicholasville, and
-                            Harrodsburg</span>.</p>
+                        locations in Lexington, Nicholasville, and
+                        Harrodsburg.</p>
                 </div>
             </div>
 
@@ -109,11 +109,9 @@
                 <a href="../imprint/"
                     style="text-decoration: none; color: var(--luxe-text-muted); font-size: 0.8rem; font-weight: 600;">Imprint</a>
             </div>
-            <p>&copy; 2026 <span data-personalize="name">UpGlow Med Spa</span>. All rights reserved.</p>
+            <p>&copy; 2026 UpGlow Med Spa. All rights reserved.</p>
         </div>
     </footer>
-
-    <script src="../js/personalizer.js"></script>
     <script src="../js/animations.js"></script>
 </body>
 
