--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav>
         <div class="container nav-content">
-            <a href="./" class="logo"><span data-personalize="name">UpGlow</span></a>
+            <a href="./" class="logo">UpGlow</a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -39,8 +39,8 @@
         <section class="hero container">
             <div class="hero-tag reveal">Premier Integrative Med Spa</div>
             <h1 class="reveal">Finding Your <span style="color: var(--luxe-primary);">Youth Again.</span></h1>
-            <p class="reveal">Experience a revolutionary approach to beauty at <span data-personalize="name">UpGlow Med
-                    Spa</span>. Our team combines advances in medical technology with an Integrative Medicine expertise
+            <p class="reveal">Experience a revolutionary approach to beauty at UpGlow Med
+                Spa. Our team combines advances in medical technology with an Integrative Medicine expertise
                 to help you reshape, release, and revive the best version of you.</p>
             <div class="reveal">
                 <a href="services/" class="btn btn-primary">Discover Treatments</a>
@@ -53,7 +53,7 @@
                 <h2 style="font-size: 2.5rem; margin-bottom: 16px;">Our Signature Services</h2>
                 <p style="color: var(--luxe-text-muted); max-width: 700px; margin: 0 auto;">We specialize in advanced
                     medical-grade aesthetic treatments designed to rejuvenate, restore, and refine. Every procedure at
-                    <span data-personalize="name">Luxe</span> is performed by certified specialists using the industry's
+                    Luxe is performed by certified specialists using the industry's
                     most advanced technology.
                 </p>
             </div>
@@ -128,11 +128,9 @@
                 <a href="imprint/"
                     style="text-decoration: none; color: var(--luxe-text-muted); font-size: 0.8rem; font-weight: 600;">Imprint</a>
             </div>
-            <p>&copy; 2026 <span data-personalize="name">UpGlow Med Spa</span>. All rights reserved.</p>
+            <p>&copy; 2026 UpGlow Med Spa. All rights reserved.</p>
         </div>
     </footer>
-
-    <script src="js/personalizer.js"></script>
     <script src="js/animations.js"></script>
 </body>
 
