--- a/terms/index.html
+++ b/terms/index.html
@@ -19,11 +19,11 @@
 
     <nav class="scrolled">
         <div class="container nav-content">
-            <a href="../" class="logo"><span data-personalize="name">UpGlow</span></a>
+            <a href="../" class="logo">UpGlow</a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
+
+
+
             </button>
             <div class="nav-links">
                 <a href="../">Home</a>
@@ -63,11 +63,11 @@
                 <a href="../imprint/"
                     style="text-decoration: none; color: var(--luxe-text-muted); font-size: 0.8rem; font-weight: 600;">Imprint</a>
             </div>
-            <p>&copy; 2026 <span data-personalize="name">UpGlow Med Spa</span>. All rights reserved.</p>
+            <p>&copy; 2026 UpGlow Med Spa. All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="../js/personalizer.js"></script>
+
     <script src="../js/animations.js"></script>
 </body>
 
